<resources>
    <string name="app_name">DSCUIFinal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="yes">YES</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="project_submission">Project Submission</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="submit">Submit</string>
    <string name="project_on_github_link">Project on GITHUB(Link)</string>
    <string name="e_mail">E-mail</string>
</resources>